// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoToButtonComponent Auto icon and icon alt 1`] = `
<app-go-to-button
  link={[Function String]}
>
  <div>
    <a
      class="container"
      href="https://www.facebook.com"
    >
      <img
        alt=""
        class="logo-image"
        src=""
      />
      <span
        style="text-decoration-line:none"
      >
        
      </span>
    </a>
    <div
      class="spacer-horizontal"
    />
  </div>
</app-go-to-button>
`;

exports[`GoToButtonComponent should match snapshot 1`] = `
<app-go-to-button>
  <div>
    <a
      class="container"
      href=""
    >
      <img
        alt=""
        class="logo-image"
        src=""
      />
      <span
        style="text-decoration-line:none"
      >
        
      </span>
    </a>
    <div
      class="spacer-horizontal"
    />
  </div>
</app-go-to-button>
`;
